# EXSES

./: .gitignore  CMakeLists.txt  LICENSE  README.md  REFERENCE.md  TODO.md  test.sh
.github/workflows/: cmake.yml
examples/: fibonacci.xes  hello.xes  strlen.xes  truth_machine.xes
exses.vim/ftdetect/: exses.vim
exses.vim/syntax/: exses.vim
src/: Lexer.cpp  Lexer.hpp  Location.cpp  Location.hpp  Parser.cpp  Parser.hpp  Position.cpp  Position.hpp  Procedure.cpp  Procedure.hpp  Token.cpp  Token.hpp  Value.cpp  Value.hpp  main.cpp  utils.cpp  utils.hpp
tests/: .gitignore  01basic.xes  02binds.xes  03save.xes  03ternary_true.xes  04ternary_false.xes  04ternary_true.xes  05drop.xes  05ternary_false.xes  06proc.xes  07binary_comparisons_and_if_block.xes  07proc.xes  09land.xes  09lor.xes  10lnot.xes  11strings.xes  12input.xes  12strings.xes  13input.xes  13input.xes_  13syscall.xes  14escapes.xes  14while.xes  15arrays.xes
xesvm/: CMakeLists.txt
xesvm/src/: Error.hpp  Instruction.hpp  Word.hpp  Xesvm.cpp  Xesvm.hpp  main.cpp
